# label-maker

./: .env  Cargo.toml  Dockerfile.backend  Dockerfile.frontend
.github/workflows/: main.yml
frontend/: .prettierrc.yaml  eslint.config.ts  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: index.ts
frontend/src/assets/: base.scss  fonts.scss  main.scss  reset.scss
frontend/src/components/: Icon.vue  ImageList.vue  ImageUpload.vue  ImageView.vue  PrinterInfo.vue
frontend/src/utils/: cache_buster.ts  icons.ts
src/: image.rs  main.rs  state.rs
